# redubber

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  Video Dub notebook.ipynb  app.py  database.py  docker-compose.yml  docker-helper.sh  example.py  file_scanner.py  openapi.json  openapi.yaml  package-lock.json  pipeline_status.py  pyproject.toml  redubber.db  redubber.py  reproj.py  requirements.txt  run.sh  seg_postprocessor.py  test_tts_preview.py  utils.py  video_analyzer.py
.github/workflows/: ci-cd.yml
.streamlit/: config.toml
app/: __init__.py  main.py  openapi_customization.py
app/api/routes/: __init__.py  filesystem.py  projects.py  settings.py  tasks.py  videos.py  voice_refinement.py
app/core/: config.py  dependencies.py  project_paths.py
app/infrastructure/: __init__.py  async_redubber_service.py  example_integration.py  task_queue.py
app/schemas/: __init__.py  models.py  settings.py  voice_refinement.py
app/services/: settings_service.py  tts_preview_generator.py  voice_instruction_generator.py
components/: open.py  project.py
docs/: redubbing.md
examples/: voice_preview_example.py
frontend/: COMPONENT_GUIDE.md  DESIGN_SYSTEM.md  FILEGRID_STORYBOOK_UPDATE.md  MOBILE_RESPONSIVE_UPDATE.md  PIPELINE_STATUS_REDESIGN.md  PIPELINE_STATUS_UPDATE.md  PROJECT_CREATION_COMPONENT.md  PWA_IMPLEMENTATION_SUMMARY.md  PWA_QUICK_START.md  PWA_TESTING.md  README.md  README_STORYBOOK.md  STORYBOOK.md  STORYBOOK_COVERAGE_REPORT.md  STORYBOOK_SUMMARY.md  THEME.md  VERIFICATION_CHECKLIST.md  VOICE_REFINEMENT_STORIES_GUIDE.md  index.html  package-lock.json  package.json  verify-pwa.sh  vite.config.ts
frontend/.storybook/: preview.tsx
frontend/public/: offline.html
frontend/scripts/: generate-pwa-icons.js
frontend/src/: index.css  main.tsx  serviceWorkerRegistration.ts
frontend/src/api/: client.ts
frontend/src/components/: FileBrowser.module.css  FileBrowser.tsx  FileGrid.module.css  FileGrid.stories.tsx  FileGrid.tsx  InstallPrompt.stories.tsx  InstallPrompt.tsx  OfflineBanner.stories.tsx  OfflineBanner.tsx  PipelineStatus.module.css  PipelineStatus.stories.tsx  PipelineStatus.tsx  ProjectCreation.module.css  ProjectCreation.stories.tsx  ProjectCreation.tsx
scripts/: export_openapi.py  install-hooks.sh  validate_openapi.py
scripts/hooks/: pre-push
tests/: __init__.py  conftest.py  test_main.py  test_project_paths.py  test_schemas.py  test_settings_api.py  test_source_language_detection.py  test_target_language.py  test_tts_preview_generator.py  test_video_target_state.py  test_voice_instruction_generator.py  test_voice_refinement_api.py  test_voice_refinement_database.py
tests/api/: test_projects.py  test_tasks.py  test_videos.py
tests/integration/: README.md  SUMMARY.md  __init__.py  conftest.py  test_async_tts_performance.py  test_file_operations.py  test_project_workflow.py  test_redubbing_workflow.py  test_task_queue.py
(+65 files in other folders)
