[tool.poetry]
name = "redubber"
version = "0.1.0"
description = "A Streamlit application for managing audio-redub projects with automatic video and subtitle file indexing"
authors = ["red <red.avtovo@gmail.com>"]
readme = "README.md"
packages = [{include = "redubber"}]

[tool.poetry.dependencies]
python = "^3.13"
streamlit = "^1.50.0"
langdetect = "^1.0.9"
openai = "^1.109.1"

[tool.poetry.scripts]
redubber = "app:main"

[tool.poetry.group.dev.dependencies]
poetry-types = "^0.6.0"
# Usage: poetry types add <package-name>

[[tool.mypy.overrides]]
module = "ffmpeg"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
