[tool.poetry]
name = "redubber"
version = "2.0.4"
description = "High-performance video redubbing system with FastAPI backend and React PWA frontend"
authors = ["red <red.avtovo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
# FastAPI Backend
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"
httpx = {extras = ["http2"], version = "^0.28.0"}
# OpenAI with async support
openai = "^1.109.1"
# Existing dependencies
langdetect = "^1.0.9"
tqdm = "^4.67.1"
tdqm = "^0.0.1"

[tool.poetry.scripts]
redubber = "app:main"

[tool.poetry.group.dev.dependencies]
poetry-types = "^0.6.0"
# Usage: poetry types add <package-name>
types-tqdm = "^4.67.0.20250809"
pytest = "^9.1.1"
pytest-asyncio = "^1.4.0"
httpx = "^0.28.1"
ruff = "^0.15.21"

[[tool.mypy.overrides]]
module = "ffmpeg"
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (slow)",
    "performance: marks performance benchmark tests",
    "stale: marks tests that need to be rewritten to match current API",
]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-m 'not stale and not integration'"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

